feat(master-data): implement address master data and autocomplete components
